fix: correção da url